fixed spacing issue for preview images

--- a/src/styles/VideoCard.css
+++ b/src/styles/VideoCard.css
@@ -25,7 +25,7 @@ iframe {
 }
 
 .video-container {
-    margin: 0 auto;
+    margin: 0.5rem 0 1rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +35,8 @@ iframe {
 .preview-wrapper {
     overflow: hidden;
     height: 255px;
-    width: auto;
+    width: 100%;
+    margin: 0 auto;
     position: relative;
 }
 .preview-image {
